fix sylius 1.11 build

--- a/sylius/1.11-apache/Dockerfile
+++ b/sylius/1.11-apache/Dockerfile
@@ -35,7 +35,7 @@ RUN curl -sS https://getcomposer.org/installer | \
 
 WORKDIR /var/www/html
 
-RUN COMPOSER_MEMORY_LIMIT=-1 composer create-project --no-scripts --no-cache --no-interaction --no-ansi --no-dev sylius/sylius-standard:^${SYLIUS_VERSION} . && \
+RUN COMPOSER_MEMORY_LIMIT=-1 composer create-project --no-scripts --no-cache --no-interaction --no-ansi sylius/sylius-standard:^${SYLIUS_VERSION} . && \
     chown -R www-data:www-data .
 
 RUN mkdir -p /var/www/.yarn && \
