--- a/magento/2.4/Dockerfile
+++ b/magento/2.4/Dockerfile
@@ -174,7 +174,8 @@ COPY etc/php-fpm.conf /usr/local/etc/
 
 RUN mkdir /artifakt_scripts && mkdir /artifakt_templates
 COPY artifakt_scripts/* /artifakt_scripts/
-COPY artifakt_templates/* /artifakt_templates/
+COPY artifakt_templates/magento /artifakt_templates/magento
+COPY artifakt_templates/nginx /artifakt_templates/nginx
 RUN chmod -R +x /artifakt_scripts/
 
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
