blackfire,entrypoint custom, fix mage run type

--- a/magento/2.4/artifakt_templates/magento/env.php.sample
+++ b/magento/2.4/artifakt_templates/magento/env.php.sample
@@ -1,19 +1,30 @@
 <?php
 
 // dynamic conf of varnish backend 
-// based on ARTIFAKT_REPLICA_LIST env. var
-// hosts are extracted from nodes private ips and port 8888 is a convention
-// see https://gitlab.com/agence-dnd-connect/artifakt-cookbooks/-/blob/e8259344b61a5858a57fd8a17fdd415f45617dbb/artifakt_docker_services/templates/default/stack/services.yaml.erb
-$_artifakt_http_cache_hosts=[];
-if (isset($_ENV['ARTIFAKT_REPLICA_LIST']) && strlen($_ENV['ARTIFAKT_REPLICA_LIST'])>0) {
-    $_host_list=explode(",", $_ENV['ARTIFAKT_REPLICA_LIST']);
-    foreach ($_host_list as $_host) {
-      $_artifakt_http_cache_hosts[]=[
-        'host'=>$_host,
-        'port'=>80
-      ];
+$_artifakt_http_cache_hosts = [];
+$replica_file_name = '/var/www/html/replica_list.txt';
+
+if (file_exists($replica_file_name)) {
+    $replica_file = file_get_contents('/var/www/html/replica_list.txt');
+
+    if ($replica_file) {
+        $_host_list = explode(',', $replica_file);
+        foreach ($_host_list as $_host) {
+            $_artifakt_http_cache_hosts[] = [
+                'host' => $_host,
+                'port' => 80,
+            ];
+        }
     }
+} else {
+    $_artifakt_http_cache_hosts = [
+        [
+            'host' => 'localhost',
+            'port' => 80,
+        ],
+    ];
 }
+
 
 return [
     'http_cache_hosts' => $_artifakt_http_cache_hosts,
