--- a/sylius/1.12-apache/Dockerfile
+++ b/sylius/1.12-apache/Dockerfile
@@ -5,7 +5,7 @@ LABEL vendor="Artifakt" \
     stage="alpha"
 
 ARG COMPOSER_VERSION=2.1.3
-ARG SYLIUS_VERSION=v1.12
+ARG SYLIUS_VERSION=1.12.x-dev
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
