--- a/angular/14/test.yaml
+++ b/angular/14/test.yaml
@@ -6,7 +6,7 @@ metadataTest:
   workdir: "/var/www/html"
 
 commandTests:
-  - name: "ng --version"
+  - name: "ng version"
     command: "ng"
-    args: [ "--version"]
+    args: [ "version"]
     expectedOutput: ['.*Angular CLI: 14\.*']
