add: customer-success team as owner of the root folder

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,2 @@
-* @artifakt-io/engineering
+* @artifakt-io/customer-success @artifakt-io/engineering
 */** @artifakt-io/customer-success @artifakt-io/engineering
