--- a/magento/2.4/etc/php-fpm.conf
+++ b/magento/2.4/etc/php-fpm.conf
@@ -20,3 +20,5 @@ clear_env = no
 
 ; Ensure worker stdout and stderr are sent to the main error log.
 catch_workers_output = yes
+group = www-data
+user = www-data
