--- a/magento/2.4-php8/artifakt_templates/nginx/default.conf
+++ b/magento/2.4-php8/artifakt_templates/nginx/default.conf
@@ -2,6 +2,8 @@
 user nginx;
 worker_processes  auto;
 
+include /etc/nginx/conf.d/custom_global.conf;
+
 error_log  /var/log/nginx/error.log error;
 pid        /var/run/nginx.pid;
 
