remove useless config

--- a/magento/2.4-php8/artifakt_templates/nginx/default.conf
+++ b/magento/2.4-php8/artifakt_templates/nginx/default.conf
@@ -4,7 +4,7 @@ worker_processes  auto;
 
 include /etc/nginx/conf.d/custom_global.conf;
 
-error_log  /var/log/nginx/error.log error;
+# error_log  /var/log/nginx/error.log error;
 pid        /var/run/nginx.pid;
 
 events {
@@ -21,7 +21,8 @@ http {
   map_hash_max_size 4096;
   map_hash_bucket_size 4096;
 
-  access_log	/var/log/nginx/access.log;
+  access_log /var/log/nginx/access.log;
+  error_log /var/log/nginx/error.log;
 
   sendfile on;
   tcp_nopush on;
@@ -86,8 +87,8 @@ server {
     location = /favicon.ico { access_log off; log_not_found off; }
     location = /robots.txt  { access_log off; log_not_found off; }
 
-    access_log off;
-    error_log  stderr error;
+    # access_log off;
+    # error_log  stderr error;
 
 
      ## Forbid any file execution from media folder
