--- a/magento/2.4/artifakt_templates/nginx/default.conf
+++ b/magento/2.4/artifakt_templates/nginx/default.conf
@@ -170,7 +170,7 @@ server {
 
     location /static/ {
         # Uncomment the following line in production mode
-        # expires max;
+        expires max;
 
         # Remove signature of the static files that is used to overcome the browser cache
         location ~ ^/static/version[a-z0-9]*/ {
