--- a/php/8.1-apache/Dockerfile
+++ b/php/8.1-apache/Dockerfile
@@ -3,12 +3,13 @@ FROM php:8.1-apache
 LABEL vendor="Artifakt" \
   author="djalal@artifakt.io" \
   stage="alpha"
+
 #TODO acpu / memcache / xmlrpc alternative if needed
-ARG PHP_EXTENSION_LIST="bcmath bz2 calendar exif gd gettext iconv intl  mysqli opcache pcntl pdo_mysql shmop soap sockets sodium sysvmsg sysvsem sysvshm xsl zip"
+ARG PHP_EXTENSION_LIST="acpu bcmath bz2 calendar exif gd gettext iconv intl  mysqli opcache pcntl pdo_mysql shmop soap sockets sodium sysvmsg sysvsem sysvshm xsl zip"
 ARG APACHE_MODULE_LIST="access_compat actions alias allowmethods auth_basic auth_digest authn_anon authn_core authn_dbd authn_dbm authn_file authn_socache authz_core authz_dbd authz_dbm authz_groupfile authz_host authz_owner authz_user autoindex cache cache_disk cache_socache cgi data dav dav_fs dav_lock dbd deflate dir dump_io echo env expires ext_filter filter headers http2 include info lbmethod_bybusyness lbmethod_byrequests lbmethod_bytraffic lbmethod_heartbeat lua macro mime mime_magic negotiation php proxy proxy_ajp proxy_balancer proxy_connect proxy_express proxy_fcgi proxy_fdpass proxy_ftp proxy_hcheck proxy_http proxy_scgi proxy_uwsgi proxy_wstunnel remoteip reqtimeout request rewrite setenvif slotmem_plain slotmem_shm socache_dbm socache_memcache socache_shmcb ssl status substitute suexec userdir vhost_alias"
 
 ARG APCU_VERSION=5.1.20
-ARG COMPOSER_VERSION=2.1.3
+ARG COMPOSER_VERSION=2.4
 ARG LIBSODIUM_PECL_VERSION=2.0.23
 ARG LIBSODIUM_SYSTEM_VERSION=1.0.18-RELEASE
 ARG MEMCACHE_VERSION=8.0
@@ -53,6 +54,7 @@ RUN docker-php-ext-configure zip
 # Install required PHP extensions
 # hadolint ignore=SC2046
 RUN docker-php-ext-install -j$(nproc) \
+  acpu \
   bcmath \
   bz2 \
   calendar \
@@ -71,8 +73,6 @@ RUN docker-php-ext-install -j$(nproc) \
   sysvmsg \
   sysvsem \
   sysvshm \
-  #  wddx \
-  #  xmlrpc \
   xsl \
   zip
 
